# Christianity-AI-Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/: bible_db.py  chat.py  embeddings.py  image_gen.py  main.py  safety.py  verifier.py
data/chroma/bd734968-5116-4c67-9d47-676a9dfa9ad2/: index_metadata.pickle
eval/: run_eval.py  test_cases.json
frontend/: index.html
